--- a/roles/demo/tasks/main.yml
+++ b/roles/demo/tasks/main.yml
@@ -1,3 +1,6 @@
 - name: print hello world
   ansible.builtin.debug:
     msg: hello world
+- name: print URL
+  ansible.builtin.debug:
+    msg: "URL {{ URL }}"
