--- a/03-variables.yml
+++ b/03-variables.yml
@@ -17,7 +17,7 @@
   tasks:
     - name: print URL
       ansible.builtin.debug:
-        msg: {{ URL }}
+        msg: "{{ URL }}"
       vars:
         URL: task.level
 
